[project]
name = "analyst-agent-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.41.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "tabulate>=0.9.0",
]
